WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187745
First Auto-PiP from Fullscreen too small & animation blocks
https://bugs.webkit.org/show_bug.cgi?id=187745
Summary
First Auto-PiP from Fullscreen too small & animation blocks
Jer Noble
Reported
2018-07-17 18:56:26 PDT
First Auto-PiP from Fullscreen too small & animation blocks
Attachments
Patch
(3.26 KB, patch)
2018-07-17 19:01 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews201 for win-future
(12.97 MB, application/zip)
2018-07-17 22:57 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-07-17 18:57:07 PDT
<
rdar://problem/42316583
>
Jer Noble
Comment 2
2018-07-17 19:01:36 PDT
Created
attachment 345216
[details]
Patch
EWS Watchlist
Comment 3
2018-07-17 22:56:56 PDT
Comment on
attachment 345216
[details]
Patch
Attachment 345216
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8571153
New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 4
2018-07-17 22:57:08 PDT
Created
attachment 345226
[details]
Archive of layout-test-results from ews201 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews201 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Jer Noble
Comment 5
2018-07-18 09:38:33 PDT
Since the files affected by this change aren't even compiled in the Windows build, I'm going assume the windows failure is just flakiness.
WebKit Commit Bot
Comment 6
2018-07-20 10:29:47 PDT
Comment on
attachment 345216
[details]
Patch Clearing flags on attachment: 345216 Committed
r234051
: <
https://trac.webkit.org/changeset/234051
>
WebKit Commit Bot
Comment 7
2018-07-20 10:29:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug